--- a/env.example
+++ b/env.example
@@ -14,9 +14,9 @@ TAILSCALE_ROUTES=10.0.0.0/24
 CONFIG_ROOT=/srv/torrent/config
 MEDIA_ROOT=/srv/torrent/share
 DOWNLOAD_ROOT=/srv/torrent
-
-# Traefik config path
+BOINC_ROOT=/srv/boinc
 TRAEFIK_USERSFILE=/srv/traefik/config/usersfile
+BLOCKY_CONFIG=/srv/blocky
 
 # qBittorrent settings
 QBITTORRENT_WEBUI_PORT=8080
