--- a/env.example
+++ b/env.example
@@ -16,7 +16,7 @@ MEDIA_ROOT=/srv/torrent/share
 DOWNLOAD_ROOT=/srv/torrent
 BOINC_ROOT=/srv/boinc
 TRAEFIK_USERSFILE=/srv/traefik/config/usersfile
-BLOCKY_CONFIG=/srv/blocky
+BLOCKY_CONFIG=/srv/blocky/config.yml
 
 # qBittorrent settings
 QBITTORRENT_WEBUI_PORT=8080
