Fix tailscale bind mounts and add extra ENV

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,13 +38,17 @@ services:
   tailscale:
     image: tailscale/tailscale
     volumes:
-      - ${CONFIG_ROOT}/tailscale:/var/lib/tailscale
+      - ${TAILSCALE_PATH}:/var/lib/tailscale
+      - /dev/net/tun:/dev/net/tun
     cap_add:
       - NET_ADMIN
       - NET_RAW
     environment:
       - TS_AUTHKEY=${TAILSCALE_AUTHKEY}
       - TS_ROUTES=10.0.0.0/24
+      - TS_EXTRA_ARGS=--advertise-tags=tag:container
+      - TS_STATE_DIR=/var/lib/tailscale
+      - TS_USERSPACE=false
     network_mode: host
     deploy:
       mode: global
