--- a/env.example
+++ b/env.example
@@ -17,6 +17,7 @@ DOWNLOAD_ROOT=/srv/torrent
 BOINC_ROOT=/srv/boinc
 TRAEFIK_USERSFILE=/srv/traefik/config/usersfile
 BLOCKY_CONFIG=/srv/blocky/config.yml
+TAILSCALE_PATH=/srv/tailscale
 
 # qBittorrent settings
 QBITTORRENT_WEBUI_PORT=8080
