--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - "8080:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ${TAILSCALE_PATH}/tailscaled.sock:/var/run/tailscale/tailscaled.sock
+      - ${TAILSCALE_PATH}/socket/tailscaled.sock:/var/run/tailscale/tailscaled.sock
     deploy:
       mode: global
       placement:
@@ -40,6 +40,7 @@ services:
     image: tailscale/tailscale
     volumes:
       - ${TAILSCALE_PATH}:/var/lib/tailscale
+      - ${TAILSCALE_PATH}/socket:/var/run/tailscale
       - /dev/net/tun:/dev/net/tun
     cap_add:
       - NET_ADMIN
@@ -50,7 +51,6 @@ services:
       - TS_EXTRA_ARGS=--advertise-tags=tag:container
       - TS_STATE_DIR=/var/lib/tailscale
       - TS_USERSPACE=false
-      - TS_SOCKET=${TAILSCALE_PATH}/tailscaled.sock
     network_mode: host
     deploy:
       mode: global
