--- a/stack.env
+++ b/stack.env
@@ -7,13 +7,8 @@ TZ=Asia/Bangkok
 DOMAIN=ledokun.taild1d0.ts.net
 
 # Directory paths
-CONFIG_ROOT=/srv/torrent/config
-MEDIA_ROOT=/srv/torrent/share
-DOWNLOAD_ROOT=/srv/torrent
-BOINC_ROOT=/srv/boinc
-TRAEFIK_USERSFILE=/srv/traefik/config/usersfile
-BLOCKY_CONFIG=/srv/blocky/config.yml
-SCRUTINY_PATH=/srv/scrutiny
+CONFIG_ROOT=/srv/media/config
+MEDIA_ROOT=/srv/media/data
 
 # qBittorrent settings
 QBITTORRENT_PORT=56535
@@ -22,6 +17,9 @@ QBITTORRENT_PORT=56535
 JELLYFIN_IP=192.168.50.20
 JELLYFIN_DOCKER_MODS=linuxserver/mods:jellyfin-opencl-intel
 JELLYFIN_RENDER_GROUP=105
+
+# Audiobookshelf settings
+AUDIOBOOKSHELF_WEBUI_PORT==13378
 
 # General container restart policy
 RESTART=unless-stopped
